--- a/spring-boot-helloworld/pom.xml
+++ b/spring-boot-helloworld/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>../spring-boot-mybatis</module>
         <module>../spring-boot-shiro</module>
+        <module>../spring-boot-shiro-redis</module>
     </modules>
     <artifactId>spring-boot-helloworld</artifactId>
 
