spring-boot ehcache 缓存

--- a/spring-boot-helloworld/pom.xml
+++ b/spring-boot-helloworld/pom.xml
@@ -14,6 +14,7 @@
         <module>../spring-boot-mybatis</module>
         <module>../spring-boot-shiro</module>
         <module>../spring-boot-shiro-redis</module>
+        <module>../spring-boot-cache-ehcache</module>
     </modules>
     <artifactId>spring-boot-helloworld</artifactId>
 
