--- a/spring-boot-cache-ehcache/pom.xml
+++ b/spring-boot-cache-ehcache/pom.xml
@@ -12,9 +12,12 @@
 
     <artifactId>spring-boot-cache-ehcache</artifactId>
 
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <name>spring-boot-cache</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>../spring-boot-cache-redis</module>
+    </modules>
 
     <dependencies>
         <dependency>
