--- a/spring-boot-cache-redis/src/main/resources/application.properties
+++ b/spring-boot-cache-redis/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.redis.pool.max-wait=-1
 spring.redis.pool.min-idle=0
 spring.redis.port=6379
 spring.redis.timeout=0
+logging.level.root=debug
