spring-boot and activitemq 消息生产者

--- a/spring-boot-cache-ehcache/pom.xml
+++ b/spring-boot-cache-ehcache/pom.xml
@@ -17,6 +17,7 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>../spring-boot-cache-redis</module>
+        <module>../spring-boot-activemq-producer</module>
     </modules>
 
     <dependencies>
